[gd_scene format=3 uid="uid://bdmk642wbtyiv"]

[ext_resource type="Script" uid="uid://dlg00bahdb887" path="res://scenes/UI/UILevelBtn/level_btn.gd" id="1_voxxs"]

[sub_resource type="Animation" id="Animation_r1m00"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TooltipLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TooltipLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_voxxs"]
resource_name = "animate_tooltip"
length = 0.23333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TooltipLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666669, 0.23333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, -60), Vector2(0, -85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TooltipLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666669),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ul71y"]
_data = {
&"RESET": SubResource("Animation_r1m00"),
&"animate_tooltip": SubResource("Animation_voxxs")
}

[node name="LevelBtn" type="Button" unique_id=2102656523]
offset_right = 47.0
offset_bottom = 48.0
pivot_offset_ratio = Vector2(0.5, 0.5)
mouse_default_cursor_shape = 2
flat = true
script = ExtResource("1_voxxs")

[node name="TooltipLabel" type="Label" parent="." unique_id=1954126637]
layout_mode = 0
offset_top = -30.0
offset_right = 66.0
offset_bottom = 48.0
pivot_offset_ratio = Vector2(0.5, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6431373)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 24
text = "Level 01
awdaw
awdawd"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1365654903]
libraries/ = SubResource("AnimationLibrary_ul71y")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
